PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2008, PHP 5.2.6

08 Nov 2007, PHP 5.2.5
- Upgraded PCRE to version 7.3 (Nuno)
- Added optional parameter $provide_object to debug_backtrace(). (Sebastian)
- Added alpha support for imagefilter() IMG_FILTER_COLORIZE. (Pierre)
- Added ability to control memory consumption between request using
  ZEND_MM_COMPACT environment variable. (Dmitry)

- Improved speed of array_intersect_key(), array_intersect_assoc(),
  array_uintersect_assoc(), array_diff_key(), array_diff_assoc() and
  array_udiff_assoc(). (Dmitry)

- Fixed move_uploaded_file() to always set file permissions of resulting file
  according to UMASK. (Andrew Sitnikov)
- Fixed possible crash in ext/soap because of uninitialized value. (Zdash Urf)
- Fixed regression in glob() when enforcing safe_mode/open_basedir checks on
  paths containing '*'. (Ilia)
- Fixed "mail.force_extra_parameters" php.ini directive not to be modifiable
  in .htaccess due to the security implications - reported by SecurityReason.
  (Stas)
- Fixed PDO crash when driver returns empty LOB stream. (Stas)
- Fixed dl() to only accept filenames - reported by Laurent Gaffie. (Stas)
- Fixed dl() to limit argument size to MAXPATHLEN (CVE-2007-4887).
  (Christian Hoffmann)
- Fixed iconv_*() functions to limit argument sizes as workaround to libc 
  bug (CVE-2007-4783, CVE-2007-4840 by Laurent Gaffie). 
  (Christian Hoffmann, Stas)
- Fixed missing brackets leading to build warning and error in the log.
  Win32 code. (Andrey)
- Fixed leaks with multiple connects on one mysqli object. (Andrey)
- Fixed endianness detection on MacOS when building universal binary. 
  (Uwe Schindler, Christian Speich, Tony)
- Fixed possible triggering of buffer overflows inside glibc
  implementations of the fnmatch(), setlocale() and glob() functions. 
  Reported by Laurent Gaffie. (Ilia)